--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: '3'
 services:
   cachet-monitor:
   # This docker-compose.yml file should exist OUTSIDE of the source directory! Otherwise change paths
-    build: ./cachet-monitor/
+    build: ./
     volumes:
-      - ./Config.json:/app/Config.json
-      - ./Data.json:/app/Data.json
+      - ./data/:/data/
