--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
   cachet-monitor:
-    image: henrikx/cachet-monitor:v1.7
+    build: ./
     volumes:
       - ./data/:/app-data/
